# fup

./: .gitignore  README.md  build.sh  fup.py  pyproject.toml  requirements.txt
fup/: __main__.py  fup.py
